Mobile background stretch-fix attempt #5

--- a/css/global.css
+++ b/css/global.css
@@ -22,7 +22,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
-  bottom: 0;
+  height: 100vh;
   left: 0;
   z-index: -100;
 }
